[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/Neon-ish-Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0, 0.105, 0.3, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="Cesar" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.35
anchor_right = 0.6
anchor_bottom = 0.45
theme = ExtResource( 2 )
text = "cesar cypher"

[node name="Affine" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.6
theme = ExtResource( 2 )
text = "affine cypher"

[node name="Vigenere" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.75
theme = ExtResource( 2 )
text = "Vigenere cypher"

[node name="Label" type="Label" parent="."]
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.2
theme = ExtResource( 2 )
text = "cryptography app"
align = 1
valign = 1

[connection signal="pressed" from="Cesar" to="." method="_on_Cesar_pressed"]
[connection signal="pressed" from="Affine" to="." method="_on_Affine_pressed"]
[connection signal="pressed" from="Vigenere" to="." method="_on_Vigenere_pressed"]
